Bug 14533 - A multichannel disconnect with a pending open may lead to a panic
Summary: A multichannel disconnect with a pending open may lead to a panic
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.13.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Stefan Metzmacher
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks: 14534
  Show dependency treegraph
 
Reported: 2020-10-14 12:53 UTC by Stefan Metzmacher
Modified: 2021-03-10 12:36 UTC (History)
2 users (show)

See Also:


Attachments
Work in progress patches for master (10.11 KB, text/plain)
2020-10-14 12:53 UTC, Stefan Metzmacher
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2020-10-14 12:53:15 UTC
Created attachment 16284 [details]
Work in progress patches for master

With multichannel turned on, a tcp disconnect on a connection with a pending
open can lead to a panic, when there's still at least 2nd connection attached.
Comment 1 Samba QA Contact 2021-03-06 03:31:20 UTC
This bug was referenced in samba master:

2a0626c32ae2803cb6c478717c34bf30231dc3dc
f1f5c36581a942bcccd63ede4b023fdb1a1d3ed4
Comment 2 Stefan Metzmacher 2021-03-10 12:36:02 UTC
This is fixed in master now and will be included in 4.15.

(We may backport this to 4.14 at a later time...)